<resources>
    <string name="app_name">Algorithm Test</string>
    <string name="buttonPrompt">Choose one version algorithm for image conversion:</string>
    <string name="timePrompt">Time cost for current version algorithm:</string>
    <string name="buttonJAVA">JAVA</string>
    <string name="buttonC">C</string>
    <string name="buttonNEON">NEON</string>
    <string name="buttonASM">ASM</string>
    <string name="escapedTime">%1$sms</string>
    <string name="imageDesc">Result image:</string>
    <string name="imagePrompt">Conversion result:</string>
</resources>